# shieldDesk

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  shielddesk.command  shielddesk.ps1
docs/: code-review-fixes.md  evidence-record-refactor.md  phase-1-report.md  phase-10-report.md  phase-2-report.md  phase-3-report.md  phase-4-report.md  phase-5-report.md  phase-7-report.md  phase-8-report.md  phase-9-report.md
docs/android/: backlog.md  kotlin-mapping.md  portable-spec.md
docs/sbom/: README.md  sbom.cdx.json
docs/schemas/: analysis_result_v1.schema.json  model_manifest_v1.schema.json  report_v1.schema.json
product/: model_manifest.json  slm_model_manifest.json
scripts/: convert_toxicity_model_to_onnx.py  generate_model_manifest.py  generate_slm_model_manifest.py
src/shielddesk/: web_main.py
src/shielddesk/domain/events/: events.py
src/shielddesk/infrastructure/: logging.py
tests/fixtures/: fake_slm_worker.py
tests/integration/: test_no_network_access.py  test_onnx_analyzer_benchmark.py  test_slm_analyzer_smoke.py  test_slm_injection.py  test_vertical_slice.py  test_web_app_smoke.py  test_web_security.py
tests/unit/application/: test_analyze_chat.py  test_analyze_chat_context.py  test_analyze_message.py  test_evidence_record_dto.py  test_export_professional_report.py  test_json_contracts.py
tests/unit/domain/: test_analysis_result.py  test_confidence.py  test_evidence_record.py  test_hash_chain.py  test_redaction.py
tests/unit/infrastructure/: test_backup.py  test_container.py  test_crypto.py  test_encrypted_sqlite_repository.py  test_logging_redaction.py  test_pdf_narrative.py  test_reporting.py  test_slm_analyzer.py  test_slm_context.py  test_slm_worker_client.py  test_sqlcipher_repository.py  test_vault_key.py  test_whatsapp_parser.py
tests/vectors/: analysis_result_v1_examples.json  italian_smoke_set.json
(+54 files in other folders)
