[project]
name = "shielddesk"
version = "0.1.0"
description = "Applicazione web locale e offline per la protezione dal cyberbullismo"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7,<3",
    "structlog>=24.1,<25",
    "argon2-cffi>=23.1,<24",
    "cryptography>=48.0.1,<49",
    "onnxruntime>=1.18,<2",
    "transformers>=4.40,<5",
    "sentencepiece>=0.2,<1",
    "numpy>=1.26,<3",
    "llama-cpp-python>=0.3,<0.4",
    "sqlcipher3>=0.6.2,<1",
    "reportlab>=4.2,<5",
    "pyzipper>=0.3,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]

[dependency-groups]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
    "ruff>=0.5,<1",
    "mypy>=1.10,<2",
    "hypothesis>=6.100,<7",
    "jsonschema>=4.22,<5",
    "httpx>=0.27,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shielddesk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Grammar GBNF: le regole sono testo di un DSL, non codice Python da spezzare.
"src/shielddesk/infrastructure/ai/slm/grammar.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
# Nessuna pubblica stub/py.typed: soppresso solo per queste librerie,
# non globalmente (--strict resta attivo per tutto il resto del codice).
module = [
    "onnxruntime", "onnxruntime.*",
    "transformers", "transformers.*",
    "llama_cpp", "llama_cpp.*",
    "sqlcipher3", "sqlcipher3.*",
    "pyzipper", "pyzipper.*",
    "reportlab.*",
]
ignore_missing_imports = true
